style(Body): add a media query to the componet to ensure it renders well on mobile small screen devices.

--- a/css/base/_base.css
+++ b/css/base/_base.css
@@ -25,3 +25,16 @@ main {
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 425px) {
+  ain {
+    width: 100%;
+    height: 100%;
+    min-height: 95vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+  }
+}
